# soft354-cuda

./: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  Canny.cu  Canny.h  HandleError.h
test/: CMakeLists.txt  GaussianFilterTest.cpp  GrayscaleFilterTest.cpp
